fix - Fixing a faq, servicesListItem, projects, services with styles on tablet and mobile

--- a/src/components/breadcrumbs/style.css
+++ b/src/components/breadcrumbs/style.css
@@ -46,10 +46,10 @@
   color: var(--color-blue-300);
 }
 
-@media screen and (max-width: 768px) {
+/* @media screen and (max-width: 768px) {
   .link,
   .curent {
     font-size: 14px;
     line-height: 20px;
   }
-}
+} */
