--- a/src/components/servicesListItem/style.css
+++ b/src/components/servicesListItem/style.css
@@ -152,8 +152,14 @@
 
 
 @media screen and (max-width: 396px) {
+  .services__item {
+    padding: 0;
+    box-shadow: none;
+  }
   .services__description {
     max-width: 197px;
+    font-size: 16px;
+    line-height: 22px;
   }
 
   .services__item.services__expanded .services__description {
